--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
       <ul>
         <li>名前: kuro</li>
         <li>所属: HiCoder</li>
-        <li>好きなもの: </li>
       </ul>
     </div>
     <div>
-      <h2>プログラミング</h2>
-      <h3>使える言語</h3>
+      <h3>好きなもの</h3>
       <ul>
-
+        <li>アニメ</li>
+        <ul>
+            <li>今期は水星の魔女とスパイファミリーを見ています</li>
+        </ul>
+        <li>Vtuber</li>
       </ul>
     </div>
     <p>
