--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>kuroの自己紹介</h1>
     <div>
       <h2>基本情報</h2>
-      <img src="./penguin.PNG" alt="" id="icon">
+      <img src="./penguin.PNG" alt="" id="icon" />
       <ul>
         <li>名前: kuro</li>
         <li>所属: HiCoder</li>
@@ -20,13 +20,14 @@
       <ul>
         <li>アニメ</li>
         <ul>
-            <li>今期は水星の魔女とスパイファミリーを見ています</li>
+          <li>今期は水星の魔女とスパイファミリーを見ています</li>
         </ul>
         <li>Vtuber</li>
       </ul>
     </div>
+    <p>kuroです。よろしくお願いします!</p>
     <p>
-        kuroです。よろしくお願いします!
+      <a href="./works/index.html">作品一覧</a>
     </p>
   </body>
 </html>
